# Transcritorio

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BETA_TEST_CHECKLIST_LINUX.md  CODE_SIGNING_POLICY.md  DEVELOPMENT.md  EXPERIMENTS.md  LINUX_INSTALL.md  MAC_INSTALL.md  MAC_LINUX.md  MLX_WHISPER_MACOS.md  PACKAGING_CHECKLIST.md  SEGURANCA_SEGREDOS.md  SITE_DISPATCH_PAT.md  STANDALONE_APP_ROADMAP.md  STANDALONE_DISTRIBUTION.md  WINDOWS_CODE_SIGNING.md
packaging/: build.ps1  bundle_filter.py  cli_entry.py  gui_entry.py  runtime-manifest.json  runtime_hook.py  split_bundle.py  stamp_build.py  transcritorio.iss  transcritorio.spec  whisperx_entry.py
scripts/: Invoke-TranscriptionPipeline.ps1  review_studio.cmd  review_studio.sh  setup_transcription_env.cmd  setup_transcription_env.sh  transcribe.cmd  transcribe.sh  transcription_gui.cmd
tests/: live_smoke_hf_download.py  prepare_fake_hf_cache.py  smoke_all_phases.py  smoke_f1_f2_f3.py  smoke_f4.py  smoke_f5.py  smoke_phases_end_to_end.py  smoke_wsl_appimage.sh  toy_bundle_filter.py  toy_bundle_filter_edges.py  toy_clear_stale_hf_locks.py  toy_color_helpers.py  toy_cuda_installer.py  toy_cuda_libs_edges.py  toy_cuda_libs_present.py  toy_describe_backend.py  toy_device_detect_edges.py  toy_device_select.py  toy_diarization_postprocess.py  toy_effective_target.py  toy_engine_settings_mlx.py  toy_has_nvidia_gpu.py  toy_manual_snapshot_download.py  toy_manual_snapshot_retry.py  toy_mlx_whisper_edge_cases.py  toy_mlx_whisper_round5.py  toy_mlx_whisper_runner.py  toy_model_manager.py  toy_partial_cache_detection.py  toy_pinned_revisions.py  toy_poll_download_progress.py  toy_progress_bar_fallback.py  toy_rename_reorder.py  toy_results_dir.py  toy_results_edges.py  toy_split_bundle.py  toy_token_vault_edges.py  toy_token_vault_keyring.py  toy_trash_e2e.py  toy_trash_logic.py  (+4 more)
transcribe_pipeline/: __init__.py  app_service.py  audio.py  cli.py  config.py  cuda_installer.py  diagnostics.py  diarization.py  gui_tk.py  manifest.py  model_manager.py  (+13 more)
(+7 files in other folders)
