[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcritorio"
version = "0.1.0"
description = "Transcricao local de entrevistas com WhisperX e pyannote"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.11.0",
    "whisperx==3.8.5",
    "pyannote-audio==4.0.4",
    "faster-whisper==1.2.1",
    "huggingface_hub>=0.28.1",
    "python-docx>=1.2.0",
    "jiwer",
]

[project.scripts]
transcritorio-cli = "transcribe_pipeline.cli:main"

[project.gui-scripts]
transcritorio = "transcribe_pipeline.review_studio_qt:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
include = ["transcribe_pipeline*"]

[tool.setuptools.package-data]
transcribe_pipeline = ["py.typed"]
