[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcritorio"
version = "0.1.1"
description = "Transcricao local de entrevistas com WhisperX e pyannote"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.11.0",
    "whisperx==3.8.5",
    "pyannote-audio==4.0.4",
    "faster-whisper==1.2.1",
    "torchcodec==0.7.0",
    "huggingface_hub>=0.28.1",
    "python-docx>=1.2.0",
    "jiwer>=3.0.0",
    "keyring>=24",
    "cryptography>=42",
]

[project.scripts]
transcritorio-cli = "transcribe_pipeline.cli:main"

[project.gui-scripts]
transcritorio = "transcribe_pipeline.review_studio_qt:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
# Apple Silicon Metal acceleration via MLX. Installs only on macOS ARM64
# (mlx framework does not build on Windows/Linux). Safe to leave off the
# default dependency set — the runtime code path checks availability and
# falls back to the CPU whisperx path.
mac = ["mlx-whisper>=0.4.0"]

[tool.setuptools.packages.find]
include = ["transcribe_pipeline*"]

[tool.setuptools.package-data]
transcribe_pipeline = ["py.typed"]
